# crep

./: .buildinfo  .gitignore  LICENSE  MANIFEST.in  README.md  coverage.json  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/autoapi/: index.doctree
.doctrees/autoapi/crep/: index.doctree
.doctrees/autoapi/crep/base/: index.doctree
.doctrees/autoapi/crep/tools/: index.doctree
.github/workflows/: coverage.yaml  doc.yml  publish.yml  pytest.yml
_sources/autoapi/: index.rst
_sources/autoapi/crep/: index.rst
_sources/autoapi/crep/base/: index.rst
_sources/autoapi/crep/tools/: index.rst
_static/: documentation_options.js
autoapi/: index.html
autoapi/crep/: index.html
autoapi/crep/base/: index.html
autoapi/crep/tools/: index.html
crep/: __init__.py  base.py  table.py  tools.py
data/: advanced_left.csv  advanced_right.csv  base_left.csv  base_right.csv
doc/: requirements.txt
doc/source/: conf.py  index.rst
examples/: .matplotlibrc  illustration.py
examples/data/: data_zones.csv
test/: __init__.py  conftest.py  test_base.py  test_table.py  test_tools.py
