[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crep"
version = "2025.1.2"
description = ""
authors = [{ name = 'Vincent Laurent', email = 'vlaurent@eurobios.com' }]
readme = "README.md"
requires-python = '>=3.6'
dependencies = [
  "pandas>1",
  "numpy",
]

[tool.setuptools.packages.find]
include = ["data*", "*"]  # package names should match these glob patterns (["*"] by default)

